--- a/wow/src/Random/styles/Wave.scss
+++ b/wow/src/Random/styles/Wave.scss
@@ -30,7 +30,7 @@
 
 .just-random-wave {
   position: absolute;
-  width: var(--scene-size);
+  width: var(--wow-scene-size);
   height: 0;
   z-index: 20;
 }
