--- a/wow/src/styles/Mint.scss
+++ b/wow/src/styles/Mint.scss
@@ -46,8 +46,7 @@
 
 
 .generate-btn {
-  color: white;
-  background-color: $highlightPink;
+  background-color: $accent;
   padding: 13px 10px 14px 10px;
   width: 100%;
   border: none;
