--- a/wow/src/styles/Wow.scss
+++ b/wow/src/styles/Wow.scss
@@ -1,23 +1,56 @@
 @use "sass:math";
 @import "Basics";
 
-.just {
+.wow {
+  background: $background;
   user-select: none;
-  width: var(--scene-size);
-  height: var(--scene-size);
+  width: var(--wow-size);
+  height: var(--wow-size);
   box-sizing: border-box;
   --chess-color-1: $blue;
   --chess-color-2: $pink;
   --animation-length: 2000ms;
   --animation-phase: calc(var(--animation-length) / 4);
   --animation-delay-multiplier: 5;
-  --image-size: calc(var(--scene-size) / 8);
-  --image-size-2: calc(var(--scene-size) / 8 * 2);
-  --image-size-3: calc(var(--scene-size) / 8 * 3);
-  --image-size-4: calc(var(--scene-size) / 8 * 4);
-  --image-size-5: calc(var(--scene-size) / 8 * 5);
-  --image-size-6: calc(var(--scene-size) / 8 * 6);
-  --image-size-7: calc(var(--scene-size) / 8 * 7);
+}
+
+$cellCount: 8;
+.wow-scene-grid {
+  display: grid;
+  --cell-size: calc(var(--wow-scene-size) / 8 - #{$borderWidth});
+  --image-size: calc(var(--wow-scene-size) / 8);
+  width: var(--wow-scene-size);
+  height: var(--wow-scene-size);
+  grid-template-columns:
+          [cell-1] var(--cell-size)
+          [cell-2] var(--cell-size)
+          [cell-3] var(--cell-size)
+          [cell-4] var(--cell-size)
+          [cell-5] var(--cell-size)
+          [cell-6] var(--cell-size)
+          [cell-7] var(--cell-size)
+          [cell-8] var(--cell-size);
+  grid-template-rows:
+          [cell-1] var(--cell-size)
+          [cell-2] var(--cell-size)
+          [cell-3] var(--cell-size)
+          [cell-4] var(--cell-size)
+          [cell-5] var(--cell-size)
+          [cell-6] var(--cell-size)
+          [cell-7] var(--cell-size)
+          [cell-8] var(--cell-size);
+  grid-gap: #{$borderWidth};
+  background: $accent;
+  position: relative;
+}
+
+.image-rescale {
+  --image-size-2: calc(var(--wow-scene-size) / 8 * 2);
+  --image-size-3: calc(var(--wow-scene-size) / 8 * 3);
+  --image-size-4: calc(var(--wow-scene-size) / 8 * 4);
+  --image-size-5: calc(var(--wow-scene-size) / 8 * 5);
+  --image-size-6: calc(var(--wow-scene-size) / 8 * 6);
+  --image-size-7: calc(var(--wow-scene-size) / 8 * 7);
   --image-pos-left-small: calc(var(--image-size) / 18.3 * -1);
   --image-pos-top-small: calc(var(--image-size) / 25.6 * -1);
   --image-pos-right-small: calc(var(--image-size) / 18.3);
@@ -40,33 +73,8 @@
   --image-shift-bottom-small-2: calc(var(--image-size) / 40);
 }
 
-$cellCount: 8;
-.just-scene-grid {
-  display: grid;
-  width: var(--scene-size);
-  height: var(--scene-size);
-  grid-template-columns:
-          [cell-1] math.percentage(1 / $cellCount)
-          [cell-2] math.percentage(1 / $cellCount)
-          [cell-3] math.percentage(1 / $cellCount)
-          [cell-4] math.percentage(1 / $cellCount)
-          [cell-5] math.percentage(1 / $cellCount)
-          [cell-6] math.percentage(1 / $cellCount)
-          [cell-7] math.percentage(1 / $cellCount)
-          [cell-8] math.percentage(1 / $cellCount);
-  grid-template-rows:
-          [cell-1] math.percentage(1 / $cellCount)
-          [cell-2] math.percentage(1 / $cellCount)
-          [cell-3] math.percentage(1 / $cellCount)
-          [cell-4] math.percentage(1 / $cellCount)
-          [cell-5] math.percentage(1 / $cellCount)
-          [cell-6] math.percentage(1 / $cellCount)
-          [cell-7] math.percentage(1 / $cellCount)
-          [cell-8] math.percentage(1 / $cellCount);
-}
-
-.just-scene-grid-cell {
-  border: 1px solid white;
+.wow-scene-grid-cell {
+  background: $background;
   overflow: hidden;
   box-sizing: border-box;
 }
