--- a/wow/src/styles/index.scss
+++ b/wow/src/styles/index.scss
@@ -1,5 +1,5 @@
 @import "include-media/dist/_include-media";
-
+@import "Basics";
 $breakpoints: (phone: 320px, tablet: 768px, desktop: 1024px);
 
 body {
@@ -12,7 +12,7 @@ body {
 }
 
 #root {
-  background: black;
+  background: $background;
 }
 
 @keyframes blur {
