--- a/wow/src/styles/Basics.scss
+++ b/wow/src/styles/Basics.scss
@@ -13,7 +13,9 @@ $text: #f5efed;
 $accent: white;
 $textHighlight1: $highlightPink;
 $textHighlight2: $highlightGreen;
+
 $borderWidth: 1px;
+$imagesCount: 6;
 
 body {
   font-family: Machina ub, serif;
