--- a/wow/src/Cools/Matrix.scss
+++ b/wow/src/Cools/Matrix.scss
@@ -1,4 +1,7 @@
+@use "sass:math";
+@import "../styles/Basics";
 
+$width: 256;
 .wow-cools-matrix {
   position: absolute;
   z-index: 10000000;
@@ -9,17 +12,6 @@
   top: 0;
   right: 0;
   bottom: 0;
-  @for $i from 1 to 64 + 1 {
-    .wow-cools-matrix-line-offset-#{$i} {
-      left: calc(var(--wow-scene-size) / 64 * #{$i - 1})
-    }
-    .wow-cools-matrix-line-offset-top-#{$i} {
-      transform: translateY(calc(var(--wow-scene-size) / 64 * #{$i - 1}));
-    }
-    .wow-cools-matrix-animation-delay-#{$i} {
-      animation-delay: calc(var(--animation-length) / 64 * #{$i});
-    }
-  }
 }
 
 .wow-cools-matrix-container {
@@ -30,22 +22,52 @@
 }
 
 .wow-cools-matrix-line {
-  position: absolute;
-  width: calc(var(--wow-scene-size) / 64);
+  opacity: 0.33;
+  width: 100%;
+  height: math.percentage(2/$width);
   display: flex;
-  flex-direction: column;
-  animation: line var(--animation-length) linear infinite;
+  flex-direction: row;
 }
 
 .wow-cools-matrix-asset {
-  max-width: 100%;
+  width: math.percentage(2/$width);
 }
 
-@keyframes line {
-  0% {
-    top: calc(-0.5 * var(--wow-scene-size));
+.wow-cools-matrix-overlay {
+  width: 100%;
+  height: 100%;
+  display: block;
+
+
+  :nth-child(even) {
+    :nth-child(even) {
+      background: rgba(0, 0, 0, 0.22);
+    }
+
+    :nth-child(odd) {
+      background: rgba(0, 0, 0, 0.44);
+    }
   }
-  100% {
-    top: calc(var(--wow-scene-size) * 1.5);
+
+  :nth-child(odd) {
+    :nth-child(even) {
+      background: rgba(0, 0, 0, 0.44);
+    }
+
+    :nth-child(odd) {
+      background: rgba(0, 0, 0, 0.22);
+    }
+  }
+
+
+  .wow-cools-matrix-overlay-line {
+    height: math.percentage(1/$width);
+    display: flex;
+    flex-direction: row;
+
+    .wow-cools-matrix-overlay-cell {
+      width: math.percentage(1/$width);
+      height: 100%;
+    }
   }
 }
