--- a/wow/src/Random/styles/ImageGrid.scss
+++ b/wow/src/Random/styles/ImageGrid.scss
@@ -1,7 +1,7 @@
 @use "sass:math";
 @import "../../styles/Basics";
 
-.just-random-image-glitch-grid {;
+.just-random-image-glitch-grid {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
