--- a/wow/src/Cools/Matrix.scss
+++ b/wow/src/Cools/Matrix.scss
@@ -2,26 +2,21 @@
 @import "../styles/Basics";
 
 $width: 256;
-.wow-cools-matrix {
-  position: absolute;
-  z-index: 10000000;
-  width: var(--wow-scene-size);
-  height: var(--wow-scene-size);
-  pointer-events: none;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
+.matrix {
+  z-index: $zIndexMatrix;
+  &.matrix-level-1 .matrix-overlay-img {
+    display: none;
+  }
 }
 
-.wow-cools-matrix-container {
+.matrix-container {
   position: relative;
   width: 100%;
   height: 100%;
   overflow: hidden;
 }
 
-.wow-cools-matrix-line {
+.matrix-line {
   opacity: 0.33;
   width: 100%;
   height: math.percentage(2/$width);
@@ -29,15 +24,15 @@ $width: 256;
   flex-direction: row;
 }
 
-.wow-cools-matrix-asset {
+.matrix-asset {
   width: math.percentage(2/$width);
 }
 
-.wow-cools-matrix-overlay {
+.matrix-overlay {
   width: 100%;
   height: 100%;
   display: block;
-
+  position: absolute;
 
   :nth-child(even) {
     :nth-child(even) {
@@ -60,12 +55,12 @@ $width: 256;
   }
 
 
-  .wow-cools-matrix-overlay-line {
+  .matrix-overlay-line {
     height: math.percentage(1/$width);
     display: flex;
     flex-direction: row;
 
-    .wow-cools-matrix-overlay-cell {
+    .matrix-overlay-cell {
       width: math.percentage(1/$width);
       height: 100%;
     }
