--- a/wow/src/styles/MintLandscape.scss
+++ b/wow/src/styles/MintLandscape.scss
@@ -139,8 +139,11 @@
     top: 80%;
     width: 3em;
     transform: translate(-100%, -50%);
+    z-index: 10000000;
+
     .pointer-wow {
       padding: 0.5em;
+      width: 100%;
     }
   }
 
