--- a/wow/src/styles/MultiRender.scss
+++ b/wow/src/styles/MultiRender.scss
@@ -2,12 +2,15 @@
 @import "include-media/dist/_include-media";
 
 .just-multirender {
-  background: black;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   flex-direction: row;
   min-height: 100vh;
   min-width: 100vw;
+}
+
+.wow-render {
+  position: relative;
 }
 
