gif reorder pink pixel

--- a/wow/src/styles/WowBorders.scss
+++ b/wow/src/styles/WowBorders.scss
@@ -25,7 +25,7 @@
     width: 1px;
     height: 1px;
     animation: wow-starting-point var(--animation-length) linear infinite;
-    background: black;
+    background: $pink;
     z-index: 1000000;
   }
 
