--- a/wow/src/Cools/Matrix.scss
+++ b/wow/src/Cools/Matrix.scss
@@ -4,9 +4,6 @@
 $width: 256;
 .matrix {
   z-index: $zIndexMatrix;
-  &.matrix-level-1 .matrix-overlay-img {
-    display: none;
-  }
 }
 
 .matrix-container {
@@ -14,6 +11,12 @@ $width: 256;
   width: 100%;
   height: 100%;
   overflow: hidden;
+}
+
+.matrix-overlay-img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 .matrix-line {
