--- a/wow/src/styles/Glitch.scss
+++ b/wow/src/styles/Glitch.scss
@@ -6,6 +6,7 @@
 @import "./Glitch/Glitch5";
 @import "./Glitch/Glitch6";
 @import "./Glitch/Glitch7";
+@import "./Glitch/GlitchGeton";
 @import "Basics";
 
 .just-glitch-img-container {
