--- a/wow/src/styles/WowBorders.scss
+++ b/wow/src/styles/WowBorders.scss
@@ -45,7 +45,7 @@
       width: calc(var(--wow-border-width) * var(--wow-border-cell-size));
       height: calc(var(--wow-border-width) * var(--wow-border-cell-size));
       --overlay-border-offset: calc(var(--wow-border-width) * var(--wow-border-cell-size) / 2);
-      background: $shadowBackground;
+      background: $black;
       box-shadow: 0 0 0 $borderWidth $accent;
     }
 
@@ -77,7 +77,7 @@
       position: absolute;
       width: calc(var(--wow-border-width) * var(--wow-border-cell-size) * 2);
       height: calc(var(--wow-border-width) * var(--wow-border-cell-size) * 2);
-      background: $shadowBackground;
+      background: $black;
       border: $borderWidth $accent solid;
     }
 
