--- a/wow/src/Pools/Pools.scss
+++ b/wow/src/Pools/Pools.scss
@@ -1,3 +1,5 @@
+@import "PoolsPopup";
+
 .pools {
   width: 100vw;
   height: 100vh;
@@ -28,6 +30,7 @@
     top: 15%;
     height: 25%;
     transform: translateX(-41%);
+    width: 250px;
   }
 
   //.pools-background-line {
@@ -78,30 +81,6 @@
   }
 }
 
-#popup-root {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-
-  .popup-content {
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-}
-
-.pools-popup {
-  position: absolute;
-  height: 80%;
-  width: 80%;
-  background: #EA42A7;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
 
 .pools-buttons-b {
   background: none;
@@ -158,3 +137,19 @@
 
 }
 
+.pools-pepe-animated {
+  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  position: relative;
+
+  &-character {
+    position: absolute;
+    width: 100%;
+  }
+
+  &-rubber-ring {
+    position: absolute;
+    width: 100%;
+  }
+}
