--- a/wow/src/Pools/PoolsCelebsPreview.scss
+++ b/wow/src/Pools/PoolsCelebsPreview.scss
@@ -15,18 +15,151 @@
   &-clouds {
     position: absolute;
     z-index: 1;
-    top: 20%;
-    width: 100%;
-    height: 20%;
+    width: 200%;
+    height: 100%;
+    @keyframes sky-clouds {
+      0% {
+        transform: translateX(-50%);
+      }
+      100% {
+        transform: translateX(0%);
+      }
+    }
+
+    &-#{1} {
+      width: 50%;
+    }
+
+    &-#{2} {
+      width: 50%;
+    }
+  }
+
+  &-clouds-top-2 {
+    opacity: 0.7;
+    top: 23%;
+    animation: sky-clouds 4s infinite linear;
+    animation-delay: 500ms;
+  }
+
+  &-clouds-top-3 {
+    opacity: 0.5;
+    top: 47%;
+    animation: sky-clouds 4s infinite linear;
+    animation-delay: 300ms;
+  }
+
+  &-clouds-top-5 {
+    opacity: 0.3;
+    z-index: 5;
+    top: 34%;
+    animation: sky-clouds 4s infinite linear;
+    animation-delay: 300ms;
+  }
+
+  &-clouds-top-4 {
+    opacity: 0.4;
+    z-index: 5;
+    top: 69%;
+    animation: sky-clouds 4s infinite linear;
+    animation-delay: 1200ms;
+  }
+
+  &-clouds-top-1 {
+    top: -3%;
+    animation: sky-clouds 4s infinite linear;
   }
 
   &-pepe {
     position: absolute;
-    z-index: 1;
-    top: 37%;
+    z-index: 10;
+    top: 32%;
     left: 36%;
-    width: 30%;
-    height: 30%;
+    width: 35%;
+    height: 35%;
+  }
+
+  &-10-games-pass {
+    position: absolute;
+    z-index: 10;
+    top: 62.5%;
+    left: 50%;
+    width: 45%;
+    height: 11%;
+    overflow: hidden;
+    transform: translate(-50%, -50%);
+
+    &-con {
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
+
+    &-img {
+      width: 100%;
+      height: 100%;
+    }
+
+    &-blick {
+      position: absolute;
+      height: 100%;
+      animation: blick 1s infinite;
+      @keyframes blick {
+        0% {
+          transform: translateX(-500%);
+        }
+        100% {
+          transform: translateX(300%);
+        }
+      }
+      opacity: 0.8;
+    }
+
+    &-blick-2 {
+      position: absolute;
+      height: 100%;
+      animation: blick 1s infinite;
+      animation-delay: 0.03s;
+      opacity: 0.5;
+      @keyframes blick {
+        0% {
+          transform: translateX(-500%);
+        }
+        100% {
+          transform: translateX(300%);
+        }
+      }
+    }
+
+    &-bg-1 {
+      position: absolute;
+      z-index: 10;
+      top: 62.5%;
+      left: 50%;
+      width: 45%;
+      height: 11%;
+      transform: translate(-50%, -50%) scale(1.01);
+
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    &-bg-2 {
+      position: absolute;
+      z-index: 10;
+      top: 62.5%;
+      left: 50%;
+      width: 45%;
+      height: 11%;
+      transform: translate(-50%, -50%) scale(1.02);
+
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
   }
 
   &-celeb {
@@ -34,6 +167,18 @@
     width: 30%;
     height: 18%;
     z-index: 2;
+    animation: chill 2s infinite;
+    @keyframes chill {
+      0% {
+        transform: translateX(2%) translateY(-1%) rotate(-2deg) skew(-1.5deg);
+      }
+      50% {
+        transform: translateX(-2%) translateY(1%) rotate(2deg) skew(1.5deg);
+      }
+      100% {
+        transform: translateX(2%) translateY(-1%) rotate(-2deg) skew(-1.5deg);
+      }
+    }
   }
 
   &-celeb-0 {
@@ -66,3 +211,11 @@
     top: 67%;
   }
 }
+
+@for $i from 1 to 11 {
+  .pools-celebs-preview-celeb-delayed-start-#{$i} {
+    --animation-delayed-start-#{$i}: calc(#{$i} / -10 * 2000ms);
+    animation-delay: var(--animation-delayed-start-#{$i}) !important;
+  }
+}
+
