--- a/wow/src/ApeLuckyCoin/Button.scss
+++ b/wow/src/ApeLuckyCoin/Button.scss
@@ -3,6 +3,31 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  text-align: center;
+
+  &-type-left {
+    .ape-lucky-coin-button-line {
+      top: 0;
+      left: -50%;
+      position: absolute;
+      width: 100%;
+      height: 0.5em;
+      border-top: 1px solid white;
+      border-right: 1px solid white;
+    }
+  }
+
+  &-type-right {
+    .ape-lucky-coin-button-line {
+      bottom: 0;
+      left: 50%;
+      position: absolute;
+      width: 100%;
+      height: 0.5em;
+      border-bottom: 1px solid white;
+      border-left: 1px solid white;
+    }
+  }
 
   &-content {
     position: relative;
@@ -32,13 +57,4 @@
     }
   }
 
-  &-line {
-    top: 0;
-    left: -10%;
-    position: absolute;
-    width: 60%;
-    height: 0.5em;
-    border-top: 1px solid white;
-    border-right: 1px solid white;
-  }
 }
