--- a/wow/src/ApeLuckyCoin/Mint.scss
+++ b/wow/src/ApeLuckyCoin/Mint.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     overflow: hidden;
 
-    &-content {
+    .ape-lucky-coin-mint-content {
       width: 100%;
       height: 100%;
       padding: 2%;
@@ -18,22 +18,63 @@
       justify-content: space-between;
     }
 
-    &-preview {
+    .ape-lucky-coin-mint-preview {
       width: 100%;
       aspect-ratio: 1/1;
     }
 
-    &-explanations {
+    .ape-lucky-coin-mint-explanations {
       width: 100%;
       height: 15%;
     }
 
-    &-buttons {
+    .ape-lucky-coin-mint-buttons {
       width: 100%;
       height: 15%;
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
     }
+
   }
+
+  &-landscape {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    font-size: 12px;
+
+    .ape-lucky-coin-mint-content {
+      width: 100%;
+      height: 100%;
+      padding: 2%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    .ape-lucky-coin-mint-preview {
+      display: block;
+      width: 60%;
+      aspect-ratio: 1/1;
+    }
+
+    .ape-lucky-coin-mint-explanations {
+      width: 20%;
+      height: 100%;
+    }
+
+    .ape-lucky-coin-mint-buttons {
+      width: 20%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+    }
+
+  }
+
 }
