--- a/wow/src/ApeLuckyCoin/Mint.scss
+++ b/wow/src/ApeLuckyCoin/Mint.scss
@@ -2,8 +2,8 @@
 
 .ape-lucky-coin-mint {
   &-portrait {
-    width: 100vw;
-    height: 100vh;
+    width: 100dvw;
+    height: 100dvh;
     display: flex;
     flex-direction: column;
     overflow: hidden;
@@ -39,8 +39,8 @@
   }
 
   &-landscape {
-    width: 100vw;
-    height: 100vh;
+    width: 100dvw;
+    height: 100dvh;
     display: flex;
     flex-direction: column;
     overflow: hidden;
