--- a/wow/src/ApeLuckyCoin/Mint.scss
+++ b/wow/src/ApeLuckyCoin/Mint.scss
@@ -58,7 +58,7 @@
 
     .ape-lucky-coin-mint-preview {
       display: block;
-      width: 60%;
+      width: 100dvh;
       aspect-ratio: 1/1;
     }
 
