--- a/wow/src/WowLuckyCoin/Mint.scss
+++ b/wow/src/WowLuckyCoin/Mint.scss
@@ -1,6 +1,8 @@
 @import "../styles/Basics";
 
 .ape-lucky-coin-mint {
+  background: linear-gradient(104deg, #ffc9d8, #c3e1ff);
+
   &-portrait {
     width: 100dvw;
     height: 100dvh;
