--- a/wow/src/WowLuckyCoin/Button.scss
+++ b/wow/src/WowLuckyCoin/Button.scss
@@ -4,6 +4,12 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  color: #483dcc;
+  font-weight: 700;
+
+  a {
+    color: #483dcc;
+  }
 
   &-type-left {
     .ape-lucky-coin-button-line {
@@ -12,10 +18,11 @@
       position: absolute;
       width: 100%;
       height: 0.5em;
-      border-top: 1px solid white;
-      border-right: 1px solid white;
+      border-top: 1px solid #483dcc;
+      border-right: 1px solid #483dcc;
     }
   }
+
 
   &-type-right {
     .ape-lucky-coin-button-line {
@@ -24,8 +31,8 @@
       position: absolute;
       width: 100%;
       height: 0.5em;
-      border-bottom: 1px solid white;
-      border-left: 1px solid white;
+      border-bottom: 1px solid #483dcc;
+      border-left: 1px solid #483dcc;
     }
   }
 
