--- a/wow/src/WowLuckyCoin/Mint.scss
+++ b/wow/src/WowLuckyCoin/Mint.scss
@@ -1,6 +1,6 @@
 @import "../styles/Basics";
 
-.ape-lucky-coin-mint {
+.wow-lucky-coin-mint {
   background: linear-gradient(104deg, #ffc9d8, #c3e1ff);
 
   &-portrait {
@@ -10,7 +10,7 @@
     flex-direction: column;
     overflow: hidden;
 
-    .ape-lucky-coin-mint-content {
+    .wow-lucky-coin-mint-content {
       width: 100%;
       height: 100%;
       padding: 2%;
@@ -20,17 +20,17 @@
       justify-content: space-between;
     }
 
-    .ape-lucky-coin-mint-preview {
+    .wow-lucky-coin-mint-preview {
       width: 100%;
       aspect-ratio: 1/1;
     }
 
-    .ape-lucky-coin-mint-explanations {
+    .wow-lucky-coin-mint-explanations {
       width: 100%;
       height: 15%;
     }
 
-    .ape-lucky-coin-mint-buttons {
+    .wow-lucky-coin-mint-buttons {
       width: 100%;
       height: 15%;
       display: flex;
@@ -48,7 +48,7 @@
     overflow: hidden;
     font-size: 12px;
 
-    .ape-lucky-coin-mint-content {
+    .wow-lucky-coin-mint-content {
       width: 100%;
       height: 100%;
       padding: 2%;
@@ -58,18 +58,18 @@
       justify-content: space-between;
     }
 
-    .ape-lucky-coin-mint-preview {
+    .wow-lucky-coin-mint-preview {
       display: block;
       width: 100dvh;
       aspect-ratio: 1/1;
     }
 
-    .ape-lucky-coin-mint-explanations {
+    .wow-lucky-coin-mint-explanations {
       width: 20%;
       height: 100%;
     }
 
-    .ape-lucky-coin-mint-buttons {
+    .wow-lucky-coin-mint-buttons {
       width: 20%;
       height: 100%;
       display: flex;
