--- a/wow/src/WowCryptoCity/Preview.scss
+++ b/wow/src/WowCryptoCity/Preview.scss
@@ -1,9 +1,3 @@
-.wow-crypto-city-preview-container {
-  width: 100dvw;
-  height: 100dvh;
-  overflow: hidden;
-}
-
 .wow-crypto-city-preview {
   background: linear-gradient(104deg, #ffd9e3, #e5f2ff);
 
@@ -43,25 +37,18 @@
   }
 
   &-landscape {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    height: 100%;
-    overflow: hidden;
-    padding-left: 100%;
-
     .wow-crypto-city-preview-item {
       z-index: 2;
 
       img {
         width: 100%;
-        height: 100%;
       }
     }
 
     &-background {
       position: absolute;
       height: 100%;
+      width: 100%;
       left: 50%;
       transform: translateX(-50%);
     }
@@ -69,29 +56,33 @@
     &-header {
       position: absolute;
       width: 30%;
-      top: 30%;
-      left: 10%;
+      top: 26%;
+      left: 27%;
+      transform: translate(-50%, -50%);
     }
 
     &-coin {
       position: absolute;
       width: 30%;
-      top: 50%;
-      left: 10%;
+      top: 76%;
+      left: 27%;
+      transform: translate(-50%, -50%);
     }
 
     &-galleries {
       position: absolute;
       width: 45%;
-      top: 10%;
-      left: 50%;
+      top: 27%;
+      left: 72%;
+      transform: translate(-50%, -50%);
     }
 
     &-fountain {
       position: absolute;
       width: 45%;
-      top: 50%;
-      left: 50%;
+      top: 77%;
+      left: 72%;
+      transform: translate(-50%, -50%);
     }
 
     justify-content: space-between;
