--- a/wow/src/styles/Glitch.scss
+++ b/wow/src/styles/Glitch.scss
@@ -7,6 +7,8 @@
 @import "./Glitch/Glitch6";
 @import "./Glitch/Glitch7";
 @import "./Glitch/GlitchGeton";
+@import "./Glitch/GlitchHue";
+@import "./Glitch/GlitchHue2";
 @import "Basics";
 
 .just-glitch-img-container {
