--- a/wow/src/WowArtGalleries/Preview.scss
+++ b/wow/src/WowArtGalleries/Preview.scss
@@ -5,6 +5,7 @@
 
   &-background {
     height: 100%;
+    width: 434vh;
   }
 
   &-iwant-my-gallery {
@@ -12,6 +13,7 @@
     top: 69%;
     left: 6vh;
     width: 30vh;
+    z-index: 10;
 
     img {
       width: 100%;
@@ -23,6 +25,7 @@
     top: 54%;
     left: 18vh;
     width: 7vh;
+    z-index: 10;
 
     img {
       width: 100%;
@@ -34,6 +37,7 @@
     top: 54%;
     left: 27vh;
     width: 7vh;
+    z-index: 10;
 
     img {
       width: 100%;
