--- a/wow/src/WowCryptoCity/Preview.scss
+++ b/wow/src/WowCryptoCity/Preview.scss
@@ -56,6 +56,7 @@
     &-header {
       position: absolute;
       width: 30%;
+      height: 12vw;
       top: 26%;
       left: 27%;
       transform: translate(-50%, -50%);
@@ -74,6 +75,7 @@
       width: 45%;
       top: 27%;
       left: 72%;
+      height: 22vw;
       transform: translate(-50%, -50%);
     }
 
@@ -82,6 +84,7 @@
       width: 45%;
       top: 77%;
       left: 72%;
+      height: 22vw;
       transform: translate(-50%, -50%);
     }
 
