--- a/wow/src/WowArtGalleries/Site.scss
+++ b/wow/src/WowArtGalleries/Site.scss
@@ -1,5 +1,7 @@
 .ape-lucky-coin-site {
   font-family: 'GT America Regular', 'Roboto Light', 'Roboto', sans-serif;
+  --scene-width: 1dvw;
+  --scene-height: 1dvh;
 }
 
 button, input[type="submit"], input[type="reset"] {
@@ -10,4 +12,12 @@ button, input[type="submit"], input[type="reset"] {
   font: inherit;
   cursor: pointer;
   outline: inherit;
+}
+
+@function w($base) {
+  @return calc($base * var(--scene-width));
+}
+
+@function h($base) {
+  @return calc($base * var(--scene-width));
 }
