--- a/wow/src/WowArtGalleries/Preview.scss
+++ b/wow/src/WowArtGalleries/Preview.scss
@@ -13,9 +13,9 @@
   &-iwant-my-gallery {
     position: absolute;
     top: h(69);
-    left: w(10);
-    width: w(80);
-    height: h(10);
+    left: h(6);
+    width: h(30);
+    height: h(7);
     z-index: 10;
 
     img {
