--- a/wow/src/styles/JustFrame.scss
+++ b/wow/src/styles/JustFrame.scss
@@ -4,11 +4,63 @@
 .just-random-frame.just-random-frame-colors-pink {
   background: $highlightPink;
 }
+
 .just-random-frame.just-random-frame-colors-green {
   background: $highlightGreen;
 }
+
 .just-random-frame.just-random-frame-colors-blue {
   background: $blue;
+}
+
+.just-random-frame.just-random-frame-colors-marble {
+  background: $marbleGradient;
+  box-shadow: none;
+  color: $marbleAccentBlue;
+
+  border: 1px solid $marbleAccentBlue;
+
+  .just-random-frame-content {
+    background: $marbleGradient;
+  }
+
+  .just-random-frame-toolbar {
+    background: $marbleGradient;
+    border-bottom: 1px solid $marbleAccentBlue;
+  }
+
+  .just-random-frame-toolbar-item {
+    background: $marbleGradient;
+    border-left: 1px solid $marbleAccentBlue;
+    border-bottom: 1px solid $marbleAccentBlue;
+  }
+
+  .just-random-frame-toolbar-close-1 {
+    background: $marbleAccentBlue;
+  }
+
+  .just-random-frame-toolbar-close-2 {
+    background: $marbleAccentBlue;
+  }
+
+  .just-random-frame-toolbar-expand-1 {
+    border: 1px solid $marbleAccentBlue;
+    background: $marbleGradient;
+  }
+
+  .just-random-frame-toolbar-expand-2 {
+    border: 1px solid $marbleAccentBlue;
+  }
+
+  .just-random-frame-toolbar-minimize-1 {
+    background: $marbleAccentBlue;
+  }
+}
+
+.just-random-frame.just-random-frame-clickable {
+  .just-random-frame-content {
+    cursor: pointer;
+  }
 }
 
 .just-random-frame.just-random-frame-colors-colors {
@@ -45,46 +97,47 @@
   position: relative;
   height: 18px;
   width: 18px;
+  cursor: pointer;
 }
 
 .just-random-frame-toolbar-close-1 {
-  width: 11px;
+  width: 10px;
   height: 1px;
   display: block;
   background: $accent;
   position: absolute;
   transform: rotate(-45deg);
-  left: 3px;
-  bottom: 9px;
+  left: 3.5px;
+  bottom: 8px;
 }
 
 .just-random-frame-toolbar-close-2 {
-  width: 11px;
+  width: 10px;
   height: 1px;
   display: block;
   background: $accent;
   position: absolute;
   transform: rotate(45deg);
-  left: 3px;
-  bottom: 9px;
+  left: 3.5px;
+  bottom: 8px;
 }
 
 .just-random-frame-toolbar-expand-1 {
   display: block;
-  width: 8px;
-  height: 8px;
-  border: 1px solid $background;
+  width: 6px;
+  height: 6px;
+  border: 1px solid $accent;
   position: absolute;
   left: 3px;
   bottom: 4px;
   z-index: 10;
-  background: $accent;
+  background: black;
 }
 
 .just-random-frame-toolbar-expand-2 {
   display: block;
-  width: 8px;
-  height: 8px;
+  width: 6px;
+  height: 6px;
   border: 1px solid $accent;
   position: absolute;
   left: 6px;
@@ -93,12 +146,12 @@
 
 .just-random-frame-toolbar-minimize-1 {
   display: block;
-  width: 7px;
+  width: 6px;
   height: 1px;
   background: $accent;
   position: absolute;
   bottom: 5px;
-  left: 5px;
+  left: 5.5px;
 }
 
 .just-random-frame-toolbar-text {
@@ -112,4 +165,43 @@
 
 .just-random-frame-toolbar-text-active {
   display: initial;
+}
+
+.just-random-frame.just-random-frame-hide {
+  .just-random-frame-content {
+    transition: max-height ease-in-out 0.5s;
+    max-height: 0;
+  }
+
+  .just-random-frame-toolbar {
+    border-bottom: none;
+  }
+
+  .just-random-frame-toolbar-item {
+    border-bottom: transparent 1px solid;
+  }
+}
+
+
+.just-random-frame-buzz {
+  animation: buzz ease-in-out 0.2s;
+}
+
+
+@keyframes buzz {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
 }
