--- a/wow/src/WowArtGalleries/Gallery/Art.scss
+++ b/wow/src/WowArtGalleries/Gallery/Art.scss
@@ -14,23 +14,22 @@
     &-frame {
       position: absolute;
       left: 50%;
-      top: 81%;
-      width: 125%;
-      height: 125%;
+      top: 50%;
+      height: 66%;
       transform: translate(-50%, -50%);
-      margin: 1%;
+      width: max-content;
 
       img {
-        width: 100%;
+        height: 100%;
       }
     }
 
     &-art {
       position: absolute;
-      left: 51%;
+      left: 50%;
       top: 50%;
       width: 84%;
-      height: 58%;
+      height: 61%;
       transform: translate(-50%, -50%);
 
       div {
@@ -52,10 +51,10 @@
 
     &-art-blur-closest {
       position: absolute;
-      left: 51%;
+      left: 50%;
       top: 50%;
       width: 84%;
-      height: 58%;
+      height: 61%;
       transform: translate(-50%, -50%);
       overflow: hidden;
 
@@ -80,10 +79,10 @@
 
     &-art-blur-back {
       position: absolute;
-      left: 51%;
+      left: 50%;
       top: 50%;
       width: 84%;
-      height: 58%;
+      height: 61%;
       transform: translate(-50%, -50%);
       overflow: hidden;
 
